<resources>

    <string name="app_name">买尬</string>
    <string name="splash_version_info">买尬客户端\n\nVersion 1.0.0</string>
    <string name="index_search_edit_hint">搜索</string>

    <!-- 菜单 -->
    <string name="menu_setting">设置</string>
    <string name="menu_history">浏览历史</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_help">帮助</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <!-- 菜单 -->


    <!-- 首页PopupWnidow -->
    <string name="barcode_buy">条码购</string>
    <string name="camera_buy">拍照购</string>
    <string name="color_buy">颜色购</string>
    <!-- 首页PopupWnidow -->


    <!-- 首页 -->
    <string name="index_recharge">充值</string>
    <string name="index_group_buy">团购</string>
    <string name="index_lottery">彩票</string>
    <string name="index_shake">查看商品</string>
    <string name="index_order">留言板</string>
    <string name="index_history">发布商品</string>
    <string name="index_collect">我的关注</string>
    <string name="index_life_journey">生活娱乐</string>
    <string name="index_notify_info">向左滑，更多信息</string>
    <string name="index_shopping_jinqiufengbao">猜你喜欢</string>
    <string name="index_shopping_remenyouhui">为你推荐</string>
    <!-- 首页 -->

<!-- 商品分类 -->
<string name="category">全部分类</string>

<!-- 二维码 -->
<string name="scan_tip">请将二维码置于取景框内扫描</string>
<string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>
    <!-- 个人中心 -->
    <string name="personal_title">我的买尬</string>
    <string name="personal_more">更多</string>
    <string name="personal_welcome">欢迎来到买尬</string>
    <string name="personal_login">登录</string>
    <string name="personal_fast_search">订单状态速查</string>
    <string name="personal_wait_pay">待付款订单</string>
    <string name="personal_all_order">全部订单</string>
    <string name="personal_my_focus">我的关注</string>
    <string name="personal_comment">商品评价/晒单</string>
    <string name="personal_information">消息中心</string>
    <string name="personal_quick_buy">轻松购</string>
    <string name="personal_account">账户安全</string>
    <string name="personal_order_center">订单中心</string>
    <string name="personal_account_center">账户中心</string>
   
    <string name="personal_favour">猜你喜欢</string>
    <string name="personal_favour_introduce">小米6是不错的手机</string>
    <string name="personal_quit">退出程序</string>
    <!-- 个人中心 -->

<!-- 登陆界面 -->
    <string name="login">登录</string>
    <string name="loginacount">学号：</string>
    <string name="loginpassword">密   码：</string>
    <string name="inputpassword">请输入密码</string>
    <string name="inputaccount">请输入账号</string>
    <string name="register">快速注册</string>
    <string name="search_info">暂无搜索历史</string>
    <string name="login_btn">登   录</string>
    <string name="find_password">找回密码</string>
    <string name="usecooperationaccount">用合作网站帐户登录</string>
    <string name="registerfree">注册</string>
    <string name="login_loading">正在登錄，請稍候。。</string>
    <string name="all_loading">正在加载，請稍候。。</string>
    <string name="category_loading">正在加载分类，請稍候。。</string>
    <string name="product_loading">正在加载商品，請稍候。。</string>
    
    
<!--  购物车 -->
    <string name="cart">购物车</string>
    <string name="cartinfo_no">您的购物车是空的，快去选购吧！</string>
    <string name="cartinfo_synchronous">购物车同步中</string>
    <string name="cart_logininfo">您可以在登录后系统后同步电脑与手机购物 \n车中的商品</string>
    <string name="cart_market">促销大卖场</string>
    

<!-- 注册 -->
<string name="register_in_normal">普通用户注册</string>
<string name="register_normal_useraccount">学号：</string>
<string name="register_normal_useraccount_hint">请输入你的学号</string>
<string name="register_normal_useraccount_userphone">手机号：</string>
<string name="register_normal_useraccount_userphone_hint">请输入你的手机号</string>
<string name="register_normal_email">邮箱：</string>
<string name="register_normal_email_hint">请输入邮箱帐号</string>
<string name="register_normal_password">密码：</string>
<string name="register_normal_password_hint">请输入密码</string>
<string name="register_normal_repassword">确认密码：</string>
<string name="register_normal_repassword_hint">请输入确认密码</string>

<!-- 商品详情 -->
<string name="attention_no">关注</string>
<string name="attention_yes">已关注</string>

<!-- 商品发布 -->
    <string name="oldthings">晒二手</string>
    <string name="product_name">商品名称</string>
    <string name="product_class">商品分类</string>
    <string name="product_price">商品价格</string>
    <string name="product_camera">请拍照或上传图片</string>
    <string name="product_area">交易地点</string>
    <string name="product_description">商品描述</string>
<!-- 产品分类 -->
    <string name="household">家电</string>
    <string name="books">图书</string>
    <string name="clothing">衣服</string>
    <string name="laptop">笔记本</string>
    <string name="digit">数码</string>
    <string name="furniture">家具</string>
    <string name="mobilephone">手机</string>
    <string name="skin_protection">商品描述</string>

<!-- 导航栏的其他的标题和其他 -->
<string name="clothingcity">查看商品</string>
<string name="hotproduct">热卖商品</string>
<string name="digital">数码家电馆</string>
<string name="ebook">好书汇</string>
<string name="daily">百货集</string>

    <!-- JazzyViewPager -->
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <!-- JazzyViewPager -->
    <string name="title_activity_household">HouseholdActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_books">BooksActivity</string>
    <string name="title_activity_clothing">ClothingActivity</string>
    <string name="title_activity_laptop">LaptopActivity</string>
    <string name="title_activity_digit">DigitActivity</string>
    <string name="title_activity_furniture">FurnitureActivity</string>
    <string name="title_activity_mobilephone">MobilephoneActivity</string>
    <string name="title_activity_skin_protection">SkinProtectionActivity</string>

</resources>