<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/index_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/android_title_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        

        <EditText
            android:id="@+id/index_search_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/search_box"
            android:drawableRight="@drawable/app_icon_voice"
            android:hint="@string/index_search_edit_hint"
            android:padding="6dp"
            android:textColor="@color/darkgray"
            android:textSize="@dimen/micro_text_size" />

        <ImageButton
            android:id="@+id/index_camer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/app_home_title_r_button_selector"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/android_search_button_icon" />
    </LinearLayout>

    <com.itau.mygod.widgets.AbScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/index_top_layout"
        android:background="@drawable/home_panicbuying_background"
        android:fadingEdge="none"
        android:fadingEdgeLength="0dp"
        android:overScrollMode="never"
        android:scrollbars="none" >

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <com.itau.mygod.widgets.jazzviewpager.JazzyViewPager
                android:id="@+id/index_product_images_container"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@color/white" />

            <LinearLayout
                android:id="@+id/index_product_images_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal" />



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_spider_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        

                        
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        

                        
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        

                        
                    </LinearLayout>

                    
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageButton
                            android:id="@+id/index_message_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/app_home_shortcuts_button_selector"
                            android:src="@drawable/shortcuts_icon_order" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/index_order"
                            android:textColor="@color/black"
                            android:textSize="@dimen/micro_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageButton
                            android:id="@+id/index_history_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/app_home_shortcuts_button_selector"
                            android:src="@drawable/shortcuts_icon_history" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/index_history"
                            android:textColor="@color/black"
                            android:textSize="@dimen/micro_text_size" />
                    </LinearLayout>

                   

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageButton
                            android:id="@+id/index_shake"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/app_home_shortcuts_button_selector"
                            android:src="@drawable/shortcuts_icon_promotion" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/index_shake"
                            android:textColor="@color/black"
                            android:textSize="@dimen/micro_text_size" />
                    </LinearLayout>
                    
                     <LinearLayout
                         
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <ImageButton
                            android:id="@+id/index_collect_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/app_home_shortcuts_button_selector"
                            android:src="@drawable/shortcuts_icon_collect" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/index_collect"
                            android:textColor="@color/black"
                            android:textSize="@dimen/micro_text_size" />
                    </LinearLayout>
                </LinearLayout>

                

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/filter_spider_line" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/home_shopping_guang_icon" />

           

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@drawable/home_shopping_icon"
                    android:drawablePadding="10dp"
                    android:text="@string/index_shopping_remenyouhui"
                    android:textColor="@color/black"
                    android:textSize="@dimen/micro_text_size" />

                <Gallery
                    android:id="@+id/index_tehui_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/index_gallery_height"
                    android:layout_marginBottom="10dp"
                    android:spacing="10dp" />
            </LinearLayout>
        </LinearLayout>
    </com.itau.mygod.widgets.AbScrollView>

</RelativeLayout>
